Modified 1DSlider to align horizontally, fixed 2DSliders labels to appear on the bottom, aligned the slider and button elements vertically

--- a/app/static/jquery.range2dslider.css
+++ b/app/static/jquery.range2dslider.css
@@ -14,7 +14,6 @@ user-select: none;
 }
 .xdsoft_range2dslider{
 	position:relative;
-	bottom: 300px;
 }
 
 .xdsoft_range2dslider.xdsoft_range2dslider_disabled{
